Bug 58629 - Wrong polkit action name "modify-device-system-other-seat"
Summary: Wrong polkit action name "modify-device-system-other-seat"
Status: RESOLVED FIXED
Alias: None
Product: udisks
Classification: Unclassified
Component: operations (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: David Zeuthen (not reading bugmail)
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-12-21 20:27 UTC by Stefan Brüns
Modified: 2013-01-07 16:12 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Proposed patch (2.20 KB, text/plain)
2012-12-21 20:27 UTC, Stefan Brüns
Details

Description Stefan Brüns 2012-12-21 20:27:05 UTC
Created attachment 71945 [details]
Proposed patch

The above mentioned method does not exist, the correct name is "modify-device-other-seat"

The wrong name is used in udiskslinuxpartition*.c
Comment 1 David Zeuthen (not reading bugmail) 2013-01-07 16:12:47 UTC
Nice catch, fixed on master. Thanks.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.