Use correct polkit action

This was pointed out by Stefan Brüns in bug 58629.

https://bugs.freedesktop.org/show_bug.cgi?id=58629

Signed-off-by: David Zeuthen <zeuthen@gmail.com>